tests/paczka1/small_fuzzy/38472708.err
Error in line 1: Zj3 S231 50,0
Error in line 3: 9cmvli A247 87,0
